# lovely-stay

./: README.md
lovely-stay-eda-process-manager/: pyproject.toml
lovely-stay-eda-process-manager/architecture/: lovely-stay-eda-process-manager-deployment-overview.puml  process-manager-apps-ownership-containers-diagram.puml  process-manager-downstream-contexts-naive-containers-diagram.puml
lovely-stay-faas-all-in-one/: pyproject.toml
lovely-stay-faas-all-in-one/architecture/: lovely-stay-faas-all-in-one-deployment-overview.puml  lovely-stay-faas-wardley-map.owm
lovely-stay-faas-all-in-one/src/automation/: __main__.py
lovely-stay-faas-all-in-one/src/lovely_stay_faas_all_in_one/: booking_api.py
lovely-stay-faas-all-in-one/tests/: test_booking_api.py
lovely-stay-paas-transaction-script/: Dockerfile  README.md  justfile  pyproject.toml
lovely-stay-paas-transaction-script/architecture/: lovely-stay-paas-transaction-script-deployment-overview.puml
lovely-stay-paas-transaction-script/src/automation/: Pulumi.lovely-stay.paas-transaction-script.yaml  Pulumi.yaml  __main__.py
lovely-stay-paas-transaction-script/src/lovely_stay_paas_transaction_script/: booking_api.py  booking_transaction.py
lovely-stay-paas-transaction-script/tests/features/: booking.feature
lovely-stay-paas-transaction-script/tests/features/steps/: booking.py
snippets/application/: booking_api.py  booking_transaction.py  offers_integration_function.py
snippets/application/firestore/: firestore_operations.py  save_document_in_firestore.py  test_firestore_operations.py
snippets/architecture/: lovely-stay-event-driven-consumer-deployment-overview.puml  lovely-stay-event-notification-deployment-overview-aws.puml  lovely-stay-event-notification-deployment-overview-gcp.puml  lovely-stay-event-notification-deployment-overview.puml  lovely-stay-event-notification-deployment-simplified-overview-gcp-impossible.puml  lovely-stay-event-notification-deployment-simplified-overview.puml  process-manager-containers-diagram.puml  process-manager-integration-containers-diagram.puml
snippets/automation/: booking_confirmation_workflow.yml  event_driven_consumer.py  outbox_event_notification.py  process_manager.py
